--- a/index.html
+++ b/index.html
@@ -8,152 +8,191 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
   <style>
     :root{
-      --text:#e9eef6; --muted:#93a1b4; --brand:#ff7a00;
-      --glass-bg: rgba(0,0,0,.18); --glass-b: rgba(255,255,255,.06);
+      --text:#e9eef6; --muted:#93a1b4; --brand:#ff7a00; --neon:#00d1ff;
+      --panel: rgba(0,0,0,.18); --bdr: rgba(255,255,255,.06);
     }
     html,body{height:100%}
     body{
-      margin:0; color:var(--text);
-      font-family: ui-sans-serif,system-ui,Segoe UI,Roboto,Helvetica,Arial;
+      margin:0; font-family: ui-sans-serif,system-ui,Segoe UI,Roboto,Helvetica,Arial;
+      color:var(--text);
       background: url("./Background.png") center/cover fixed no-repeat #0b0f14;
     }
-    .wrap{max-width:980px; margin:0 auto; padding: 10px 16px 48px}
+    .glass{ background: var(--panel); backdrop-filter: blur(4px); -webkit-backdrop-filter: blur(4px);
+      border:1px solid var(--bdr); border-radius:14px; box-shadow:0 10px 32px rgba(0,0,0,.35), inset 0 0 24px rgba(0,0,0,.25); }
 
-    /* TOP */
-    .topbar{ display:flex; align-items:center; justify-content:space-between; margin-top:8px }
+    .topbar{ display:flex; align-items:center; justify-content:space-between; gap:12px;
+      padding:14px 16px; position:sticky; top:0; z-index:50;
+      background: linear-gradient(180deg, rgba(0,0,0,.55), rgba(0,0,0,.22), rgba(0,0,0,0));
+      backdrop-filter: blur(3px);
+    }
     .brand{ display:flex; align-items:center; gap:10px; font-family:'Poppins',sans-serif; font-weight:700; font-size:26px; }
     .brand img{width:36px; height:36px; border-radius:8px}
     .brand .accent{color:var(--brand)}
     .claim{font-size:12px; color:var(--muted); margin-top:-6px}
 
-    /* HERO */
-    h1{font-size:46px; line-height:1.06; margin:18px 0 6px}
-    .sub{color:var(--muted); margin-bottom:14px}
-    .hero{
-      margin:10px auto 12px; width:min(92vw,640px); aspect-ratio:1/1;
-      display:grid; place-items:center; position:relative; background:transparent; border:none; box-shadow:none;
-    }
+    .actions{display:flex; gap:10px}
+    .iconbtn{ width:44px; height:44px; border-radius:12px; border:1px solid var(--bdr);
+      background: var(--panel); color:#cfe2ff; display:grid; place-items:center; cursor:pointer;
+      box-shadow: 0 4px 20px rgba(0,0,0,.35); }
+    .badge{ position:absolute; margin-top:-28px; margin-left:26px; background:var(--brand); color:#111; font-weight:700; font-size:12px;
+      width:22px; height:22px; border-radius:50%; display:grid; place-items:center; box-shadow:0 0 16px #ff7a0033; }
+
+    .menu-wrap{ position:relative; }
+    .dropdown{ position:absolute; right:0; top:48px; min-width:240px; display:none;
+      background: var(--panel); border:1px solid var(--bdr); border-radius:12px; box-shadow:0 12px 40px rgba(0,0,0,.35); overflow:hidden; z-index:60; }
+    .dropdown.open{ display:block; }
+    .dd-item{ padding:12px 14px; font-size:15px; display:flex; align-items:center; justify-content:space-between; gap:10px; cursor:pointer; }
+    .dd-item:hover{ background: rgba(255,255,255,.06); }
+    .dd-sub{ display:none; border-top:1px solid var(--bdr); }
+    .dd-item.expand::after{ content:'▸'; opacity:.6; }
+    .dd-item.expand.open::after{ content:'▾'; }
+    .dd-sub.open{ display:block; }
+    .dd-sub .dd-item{ padding-left:22px; }
+
+    .wrap{max-width:980px; margin:0 auto; padding: 10px 16px 64px}
+    h1{font-size:42px; line-height:1.05; margin:8px 0 6px}
+    .sub{color:var(--muted); margin-bottom:18px}
+
+    .hero{ margin:14px auto 18px; width:min(92vw,640px); aspect-ratio:1/1;
+      display:grid; place-items:center; position:relative; background:transparent; border:none; box-shadow:none; }
     .logoBtn{ border:none; background:transparent; padding:0; cursor:pointer; display:grid; place-items:center; }
-    .logo{
-      width:76%; max-width:520px; user-select:none; pointer-events:none;
+    .logo{ width:76%; max-width:520px; user-select:none; pointer-events:none;
       filter: drop-shadow(0 0 0px rgba(0,209,255,.0));
-      animation: neonPulse 2.2s ease-in-out infinite;
-    }
-    @keyframes neonPulse{
-      0%   { filter: drop-shadow(0 0 0px rgba(0,209,255,.0)); transform: scale(1); }
-      50%  { filter: drop-shadow(0 0 14px rgba(0,209,255,.38)); transform: scale(1.012); }
-      100% { filter: drop-shadow(0 0 0px rgba(0,209,255,.0)); transform: scale(1); }
-    }
+      animation: neonPulse 2.2s ease-in-out infinite; }
+    @keyframes neonPulse{ 0%{filter:drop-shadow(0 0 0 rgba(0,209,255,0)); transform:scale(1)}
+      50%{filter:drop-shadow(0 0 14px rgba(0,209,255,.38)); transform:scale(1.012)}
+      100%{filter:drop-shadow(0 0 0 rgba(0,209,255,0)); transform:scale(1)} }
 
-    /* MIC + TRANSCRIPT */
-    .glass{ background:var(--glass-bg); border:1px solid var(--glass-b);
-      border-radius:14px; box-shadow:0 8px 40px rgba(0,0,0,.35); backdrop-filter: blur(2px)
-    }
-    #micBtn{
-      position: fixed; right: 12px; top: 18px; z-index: 41;
-      width:54px; height:54px; border-radius:14px; border:1px solid var(--glass-b);
-      display:grid; place-items:center; cursor:pointer; background:var(--glass-bg); color:#cfe2ff;
-      box-shadow:0 8px 34px rgba(0,0,0,.35);
-    }
-    #transcript{
-      margin:10px auto 0; max-width:900px; padding:16px 14px; min-height:40px;
-      background: var(--glass-bg); border:1px solid var(--glass-b);
-      border-radius:14px; color:var(--text); font-size:18px;
-      box-shadow: inset 0 0 24px #0005, 0 8px 40px #000a;
-    }
+    .bubble{ margin:8px auto 0; max-width:900px; padding:16px 14px; min-height:40px; background: var(--panel);
+      border:1px solid var(--bdr); border-radius:14px; color:var(--text); font-size:18px; box-shadow: inset 0 0 24px #0005, 0 8px 40px #000a; }
 
-    /* DOLNE KAFELKI */
-    .bottom-buttons{
-      display:flex; flex-wrap:wrap; justify-content:center; gap:12px; margin-top:14px;
-    }
-    .bottom-buttons button{
-      flex:1 1 calc(33.333% - 12px); max-width:180px; min-width:120px; height:56px;
-      display:flex; align-items:center; justify-content:center; gap:10px;
-      font-size:18px; border-radius:14px;
-      background: rgba(0,0,0,.18); color:#e8eefb; border:1px solid var(--glass-b);
-      cursor:pointer; box-shadow: 0 10px 32px rgba(0,0,0,.35);
-      transition: transform .15s ease, background .2s ease;
-    }
-    .bottom-buttons button:hover{ transform: translateY(-1px); background: rgba(0,0,0,.22); }
+    .bottom-buttons{ display:flex; flex-wrap:wrap; justify-content:center; gap:12px; margin-top:14px; }
+    .bottom-buttons button{ flex:1 1 calc(33.333% - 12px); max-width:180px; min-width:120px; height:56px;
+      display:flex; align-items:center; justify-content:center; gap:10px; font-size:18px; border-radius:14px;
+      background: var(--panel); color:#e8eefb; border:1px solid var(--bdr); cursor:pointer; box-shadow:0 10px 32px rgba(0,0,0,.35);
+      transition: transform .15s ease, background .2s ease; }
+    .bottom-buttons button:hover{ transform: translateY(-1px); background: rgba(255,255,255,.22); }
     .bottom-buttons .primary{ outline:2px solid #ff7a00aa; box-shadow:0 0 20px #ff7a0033 inset, 0 10px 32px #000; }
 
-    @media (max-width:520px){
+    /* Modal potwierdzenia */
+    .modal{ position:fixed; inset:0; display:none; align-items:center; justify-content:center; z-index:100; }
+    .modal.open{ display:flex; }
+    .modal .overlay{ position:absolute; inset:0; background:#0008; }
+    .modal .card{ position:relative; width:min(92vw,520px); background:var(--panel); border:1px solid var(--bdr); border-radius:16px; padding:16px; z-index:101; }
+    .row{ display:flex; align-items:flex-start; gap:8px; margin:6px 0; }
+    .row .lbl{ width:110px; color:var(--muted); }
+    .btns{ display:flex; gap:10px; justify-content:flex-end; margin-top:14px; }
+    .btn{ padding:10px 14px; border-radius:10px; border:1px solid var(--bdr); background:var(--panel); color:var(--text); cursor:pointer; }
+    .btn.primary{ background:#ff7a00; color:#111; border-color:#ff7a00; font-weight:700; }
+    .note-privacy{ font-size:13px; color:var(--muted); margin-top:8px; }
+
+    @media (max-width:480px){
       h1{font-size:36px}
       .bottom-buttons button{height:52px; font-size:16px; min-width:110px}
     }
   </style>
-
-  <style>
-    /* chatops:inject */
-    
-    .glass{background:rgba(0,0,0,.18);backdrop-filter:blur(2px);-webkit-backdrop-filter:blur(2px);
-      border:1px solid rgba(255,255,255,.06);border-radius:14px;box-shadow:0 8px 32px rgba(0,0,0,.35);}
-  
-  </style>
 </head>
 <body>
-  <div class="wrap">
-    <!-- top -->
-    <div class="topbar">
-      <div>
-        <div class="brand">
-          <img src="./Freeflow-logo.png" alt="logo"/>
-          <span class="accent">Free</span>Flow
+
+  <header class="topbar">
+    <div>
+      <div class="brand">
+        <img src="./Freeflow-logo.png" alt="logo"/>
+        <span class="accent">Free</span>Flow
+      </div>
+      <div class="claim">Voice to order — tryb testowy, bez profilowania</div>
+    </div>
+    <div class="actions">
+      <div class="menu-wrap">
+        <button class="iconbtn" id="menuBtn" aria-label="Menu">☰</button>
+        <div id="dropdown" class="dropdown glass">
+          <div class="dd-item" id="ordersBtn">Zamówienia</div>
+          <div class="dd-item" id="settingsBtn">Ustawienia</div>
+          <div class="dd-item" id="helpBtn">Pomoc</div>
+          <div class="dd-item" id="privacyBtn">Prywatność</div>
         </div>
-        <div class="claim">Voice to order</div>
+      </div>
+      <div style="position:relative">
+        <button class="iconbtn" id="cartBtn" aria-label="Koszyk">🛒</button>
+        <div class="badge" id="cartBadge">0</div>
       </div>
     </div>
+  </header>
 
-    <!-- mic + transcript -->
-    <button id="micBtn" class="glass" aria-label="Naciśnij, aby mówić">🎙️</button>
+  <main class="wrap">
+    <h1>Złóż zamówienie</h1>
+    <div class="sub">Jedzenie, Taxi albo nocleg — powiedz lub kliknij.</div>
 
-    <!-- hero logo -->
     <section class="hero">
-      <button id="logoBtn" type="button" class="logoBtn" aria-label="Naciśnij, aby mówić">
+      <button id="micBtn" type="button" class="logoBtn" aria-label="Naciśnij, aby mówić">
         <img class="logo" src="./Freeflow-logo.png" alt="FreeFlow" />
       </button>
     </section>
 
-    <h1>Złóż zamówienie</h1>
-    <div class="sub">Taxi, posiłek, a może nocleg?</div>
+    <div id="transcript" class="bubble glass">Powiedz: „dwie pepperoni na 18:45 bez oliwek”.</div>
 
-    <!-- bąbel -->
-    <div id="transcript" class="glass">Powiedz lub kliknij, co zamówić…</div>
-
-    <!-- dolne 3 kafelki -->
     <div class="bottom-buttons" style="margin-bottom:32px">
       <button class="primary glass" data-quick="Jedzenie">🍽️ <span>Jedzenie</span></button>
       <button class="glass" data-quick="Taxi">🚕 <span>Taxi</span></button>
       <button class="glass" data-quick="Hotel">🏠 <span>Hotel</span></button>
     </div>
+  </main>
+
+  <!-- Modal potwierdzenia -->
+  <div class="modal" id="confirmModal" aria-hidden="true">
+    <div class="overlay" data-close></div>
+    <div class="card glass">
+      <h3>Potwierdź zamówienie</h3>
+      <div class="row"><div class="lbl">Restauracja</div><div id="m_rest"></div></div>
+      <div class="row"><div class="lbl">Pozycje</div><div id="m_items"></div></div>
+      <div class="row"><div class="lbl">Czas</div><div id="m_when"></div></div>
+      <div class="row"><div class="lbl">Uwagi</div><div id="m_note"></div></div>
+      <label style="display:flex; gap:8px; align-items:center; margin-top:8px">
+        <input type="checkbox" id="keepData" />
+        <span>Zachowaj dane po realizacji (domyślnie: nie)</span>
+      </label>
+      <div class="note-privacy">FreeFlow nie profiluje Twoich danych. W trybie testowym zamówienie nie trafia do lokalu — wysyłamy potwierdzenie do operatora.</div>
+      <div class="btns">
+        <button class="btn" data-close>Anuluj</button>
+        <button class="btn" id="confirmBtn">Potwierdź</button>
+      </div>
+    </div>
   </div>
 
   <audio id="ttsPlayer" preload="auto"></audio>
 
-  <!-- logika asystenta (nie zmieniamy) -->
-  <script src="./freeflow-assistant.js?v=classic1"></script>
+  <script src="./freeflow-assistant.js?v=4"></script>
 
-  <script>
-    // Klik logo = start/stop mikrofon (jak przycisk mic)
-    const logo = document.getElementById('logoBtn');
-    const micBtn = document.getElementById('micBtn');
-    if (logo && micBtn) logo.addEventListener('click', ()=> micBtn.click());
-
-    // Quick actions -> przykładowe prompty do NLU
-    document.querySelectorAll('[data-quick]').forEach(btn=>{
-      btn.addEventListener('click', ()=>{
-        const t = btn.dataset.quick;
-        if (window.sendToAssistant) {
-          // lekki prompt do testów
-          const text = (t === 'Jedzenie')
-            ? 'Trattoria Napoli, pizza pepperoni dwie na 19:30 bez oliwek'
-            : (t === 'Taxi')
-              ? 'Taxi z Rynku do Bronowic za 15 minut'
-              : 'Hotel w centrum Krakowa na jutro, jedna noc';
-          window.sendToAssistant(text);
-        }
-      });
+  <script type="module">
+    // Dropdown
+    const menuBtn = document.getElementById('menuBtn');
+    const dropdown = document.getElementById('dropdown');
+    menuBtn.addEventListener('click', (e)=>{ e.stopPropagation(); dropdown.classList.toggle('open'); });
+    document.addEventListener('click', (e)=>{
+      if (!dropdown.contains(e.target) && e.target !== menuBtn) dropdown.classList.remove('open');
     });
+
+    // Koszyk (prosty localStorage)
+    import { addToCart, getCart, cartCount } from './cart.js';
+    const badge = document.getElementById('cartBadge');
+    function renderBadge(){ badge.textContent = cartCount(); }
+    renderBadge();
+    window.addEventListener('cart:update', renderBadge);
+
+    document.querySelector('[data-quick="Jedzenie"]').addEventListener('click', ()=> addToCart({type:'food', name:'Zestaw dnia'}));
+    document.querySelector('[data-quick="Taxi"]').addEventListener('click',   ()=> addToCart({type:'taxi',  name:'Kurs standard'}));
+    document.querySelector('[data-quick="Hotel"]').addEventListener('click',  ()=> addToCart({type:'hotel', name:'Pokój 1 noc'}));
+
+    document.getElementById('cartBtn').addEventListener('click', ()=>{
+      const items = getCart();
+      alert(items.length ? items.map(i=>`• ${i.type} – ${i.name}`).join('\n') : 'Koszyk jest pusty');
+    });
+
+    // Placeholdery
+    document.getElementById('ordersBtn').addEventListener('click', ()=> alert('Twoje zamówienia (demo)'));
+    document.getElementById('settingsBtn').addEventListener('click',()=> alert('Ustawienia (demo)'));
+    document.getElementById('helpBtn').addEventListener('click',    ()=> alert('Pomoc (FAQ, kontakt) – demo'));
+    document.getElementById('privacyBtn').addEventListener('click', ()=> alert('Prywatność: zero profilowania, dane kasowane po realizacji'));
   </script>
 </body>
 </html>
