--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
     <h1>FreeFlow – zamów głosem</h1>
     <section class="hero">
       <button id="micBtn" class="logoBtn" aria-label="Naciśnij, aby mówić">
-        <img class="logo" src="./Freeflow-logo.png" alt="FreeFlow"/>
-      </button>
+        <img class="logo" src="./freeflow-logo.svg" alt="FreeFlow" />
     </section>
     <div id="transcript" class="bubble">Powiedz, co chcesz zamówić…</div>
     <div id="results" class="bubble" style="margin-top:10px;display:none"></div>
