--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>FreeFlow • Voice to order</title>
-  <link rel="icon" href="./Freeflow-logo.png"/>
+  <div class="ff-logo-wrap">
+  <img src="assets/freeflow-logo.svg?v=1" alt="FreeFlow logo"/>
+</div>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
   <style>
     :root{ --text:#e9eef6; --muted:#93a1b4; --brand:#ff7a00; }
